# Acyro

./: .gitignore  LICENSE  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: design.md  publishing.md
examples/: acyrofile.py
src/acyro/: __init__.py  cache.py  cli.py  dag.py  exceptions.py  executor.py  task.py
tests/: test_cache.py  test_cli.py  test_dag.py  test_executor.py  test_package.py  test_task.py
