[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "acyro"
version = "0.2.0"
description = "A small Python-native DAG task executor with caching."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Acyro contributors" },
]
keywords = ["dag", "task-runner", "workflow", "build", "cache"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Build Tools",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/xjn2005/Acyro"
Repository = "https://github.com/xjn2005/Acyro"
Issues = "https://github.com/xjn2005/Acyro/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.5",
]

[project.scripts]
acyro = "acyro.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/acyro"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-p no:cacheprovider"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
